# rag-cpp

./: .env.example  .gitignore  README.md  gradio_app.py  main.py  mcp.json  mcp_config.example.json  mcp_server.py  pyproject.toml  requirements-benchmark.txt  requirements.txt
benchmarks/: eval_metrics.py  generate_qa_dataset.py  plot_eval.py  rag_eval_dataset.json  rebuild_qa_from_batches.py  run_local_rag_eval.py  run_tau2_rag.py  tau2_rag_eval.py
config/: rag_config.json  settings.py
cpp/: CMakeLists.txt
cpp/bindings/: pybind_module.cpp  ragdb_module.cpp
cpp/include/rag_db/: c_api.h  config.hpp  distance.hpp  hnsw_algorithm.hpp  hnsw_index.hpp  level_generator.hpp  link_storage.hpp  priority_queue.hpp  types.hpp  vector_storage.hpp  visited_pool.hpp
cpp/include/ragdb/: candidate_queue.hpp  distance.hpp  hnsw_index.hpp  hnsw_insert.hpp  hnsw_search.hpp  link_store.hpp  neighbor_select.hpp  persistence.hpp  types.hpp  vector_store.hpp  visited_set.hpp
cpp/src/: c_api.cpp  candidate_queue.cpp  distance.cpp  hnsw_index.cpp  hnsw_index_add.cpp  hnsw_index_ctor.cpp  hnsw_index_search.cpp  hnsw_insert.cpp  hnsw_persistence.cpp  hnsw_search.cpp  link_store.cpp  neighbor_select.cpp  persistence.cpp  vector_store.cpp  visited_set.cpp
profiling/: profile_index_sync.py  pyspy_common.py  run_pyspy_gradio.py  run_pyspy_index.py
python/: bm25_index.py  chunking.py  corpus_paths.py  embeddings_client.py  file_scanner.py  hybrid_search.py  hyde.py  index_manager.py  llm_client.py  mcp_server.py  metadata_store.py  native_index.py  path_utils.py  rag_mcp_app.py  (+1 more)
(+42 files in other folders)
